--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -1,3 +1,107 @@
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Hahmlet:wght@400;500;600;700&family=Noto+Serif+KR:wght@400;600;900&family=Roboto&family=Silkscreen&display=swap');
+* {
+  font-family: 'Noto Serif KR', serif;
+}
+img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  opacity: 0.8;
+}
+body {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 10px #000;
+  text-align: center;
+}
+#clock {
+  margin-top: 240px;
+  font-size: 80px;
+  font-weight: 800;
+  margin-bottom: 0;
+}
+h1 {
+  margin-top: 0;
+  margin-bottom: 100px;
+}
+input[type='text'] {
+  width: 300px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  border-radius: 20px;
+  padding-left: 20px;
+  outline: 0;
+}
+button {
+  width: 100px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: 900;
+  border: none;
+  border-radius: 20px;
+  outline: 0;
+  color: white;
+  background-color: tomato;
+}
+.done {
+  background-color: #4dccc6;
+  background-image: linear-gradient(315deg, #4dccc6 0%, #96e4df 74%);
+  line-height: 42px;
+  font-size: 12px;
+  padding: 0;
+  margin-left: 20px;
+  border: none;
+  cursor: pointer;
+}
+.done:hover {
+  background-color: #89d8d3;
+  background-image: linear-gradient(315deg, #89d8d3 0%, #03c8a8 74%);
+}
+.todo-wrap {
+  display: flex;
+  justify-content: center;
+}
+#todo-list {
+  overflow-y: scroll;
+}
+#todo-list {
+  width: 400px;
+  height: 300px;
+  overflow: auto;
+}
+#todo-list::-webkit-scrollbar {
+  width: 10px;
+}
+#todo-list::-webkit-scrollbar-thumb {
+  background-color: white;
+  opacity: 0.8;
+  border-radius: 10px;
+}
+#todo-list::-webkit-scrollbar-track {
+  background-color: #03c8a8;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 5px white;
+}
+li {
+  list-style: none;
+  margin: 12px;
+}
+#quote {
+  font-size: 14px;
+  bottom: 40px;
+  width: 100%;
+  position: absolute;
+}
+#weather {
+  font-size: 12px;
+  top: 40px;
+  right: 40px;
+  position: absolute;
+}
 .hidden {
   display: none;
 }
